feat: implementing DatabaseConnection class
removing unused dependencies and plugin

adding method getInstance with dotenv dependency

changing dotenv attribute of DatabaseConnection to not be static

using mocks instead of managing environment variables