@@ -50,17 +50,6 @@
       <artifactId>dotenv-java</artifactId>
       <version>3.0.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.junit-pioneer</groupId>
-      <artifactId>junit-pioneer</artifactId>
-      <version>2.2.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-commons</artifactId>
-      <version>1.7.0</version>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -70,17 +59,6 @@
         <version>3.8.0</version>
         <configuration>
           <release>11</release>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.3.0</version>
-        <configuration>
-          <argLine>
-            --add-opens java.base/java.util=ALL-UNNAMED
-            --add-opens java.base/java.lang=ALL-UNNAMED
-          </argLine>
         </configuration>
       </plugin>
       <plugin>
